--- a/src/app/schemer/schemer.component.scss
+++ b/src/app/schemer/schemer.component.scss
@@ -1,298 +1,82 @@
-.response-list .response-row {
-  display: grid;
-  grid-template-rows: auto;
-  column-gap: 10px
-}
-.response-list .response-row:nth-child(even) {
-  background-color: #f1f1f1;
-}
-.centered-column {
-  text-align: center
+.scheme-body {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  bottom: 0;
+  padding: 0;
 }
 
-.fx-row-space-between-center {
-  box-sizing: border-box;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: center;
-}
-.fx-row-space-between-start {
-  box-sizing: border-box;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: flex-start;
-}
-.fx-row-space-between-end {
-  box-sizing: border-box;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: flex-end;
-}
-.fx-row-space-between-stretch {
-  box-sizing: border-box;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: stretch;
+.navi-bar {
+  background-color:whitesmoke;
+  margin: 0;
+  border-left: 5px solid #c4e6e8;
 }
 
-.fx-row-space-between-center {
-  box-sizing: border-box;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: center;
+.var-scheme-list {
+  overflow: auto;
 }
 
-.fx-row-space-around-center {
-  box-sizing: border-box;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-around;
-  align-items: center;
-}
-.fx-row-start-center {
-  box-sizing: border-box;
-  display: flex;
-  flex-direction: row;
-  justify-content: flex-start;
-  align-items: center;
-}
-.fx-row-start-end {
-  box-sizing: border-box;
-  display: flex;
-  flex-direction: row;
-  justify-content: flex-start;
-  align-items: flex-end;
-}
-.fx-row-end-end {
-  box-sizing: border-box;
-  display: flex;
-  flex-direction: row;
-  justify-content: flex-end;
-  align-items: flex-end;
+.var-list-buttons {
+  background-color: #c4e6e8;
 }
 
-.fx-row-end-stretch {
-  box-sizing: border-box;
-  display: flex;
-  flex-direction: row;
-  justify-content: flex-end;
-  align-items: stretch;
+.var-list-buttons > .mat-button {
+  padding: 0;
+  min-width: 0;
 }
 
-.fx-row-end-center {
-  box-sizing: border-box;
-  display: flex;
-  flex-direction: row;
-  justify-content: flex-end;
-  align-items: center;
+.selected {
+  background-color: #90d2d2;
 }
 
-.fx-row-start-stretch {
-  box-sizing: border-box;
-  display: flex;
-  flex-direction: row;
-  justify-content: flex-start;
-  align-items: stretch;
-}
-.fx-row-center-start {
-  box-sizing: border-box;
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: flex-start;
-}
-.fx-row-start-start {
-  box-sizing: border-box;
-  display: flex;
-  flex-direction: row;
-  justify-content: flex-start;
-  align-items: flex-start;
-}
-.fx-row-center-center {
-  box-sizing: border-box;
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-}
-.fx-row-center-stretch {
-  box-sizing: border-box;
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: stretch;
+.var-scheme-container {
+  background-color: white;
+  overflow-x: hidden;
+  overflow-y: auto;
 }
 
-.fx-column-center-center {
-  box-sizing: border-box;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+.basic-var-list-header, .var-scheme-list-header {
+  height: 22px;
+  padding: 8px 15px;
+  font-size: 16px;
+  background-color: #c4e6e8;
 }
 
-.fx-column-start-start {
-  box-sizing: border-box;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  align-items: flex-start;
+.var-scheme-list-header {
+  margin-top: 10px;
 }
 
-.fx-column-start-center {
-  box-sizing: border-box;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  align-items: center;
+.var-list-entry {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  font-size: 14px
 }
 
-.fx-column-start-stretch {
-  box-sizing: border-box;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  align-items: stretch;
+.invalid-data-format {
+  font-size: large;
+  color: darkorange;
+  font-weight: bold;
+  padding: 20px;
 }
 
-.fx-column-end-stretch {
-  box-sizing: border-box;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-end;
-  align-items: stretch;
+.var-marker-INVALID_SOURCE, .var-marker-EMPTY, .var-marker-HAS_CODES {
+  width: 12px;
+  height: 12px;
+  border-radius: 6px;
+  margin-left: 2px;
+  margin-right: 2px;
 }
 
-.fx-column-space-between-stretch {
-  box-sizing: border-box;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: stretch;
+.var-marker-INVALID_SOURCE {
+  background: #ff3300;
 }
 
-.fx-column-space-between-end {
-  box-sizing: border-box;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: flex-end;
+.var-marker-EMPTY {
+  background: #ffcc00;
 }
 
-.fx-column-center-end {
-  box-sizing: border-box;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: flex-end;
-}
-
-.fx-flex-fill {
-  flex: 1 1 0;
-  box-sizing: border-box;
-}
-
-.fx-flex-row-10 {
-  box-sizing: border-box;
-  flex: 1 1 100%;
-  max-width: 10%;
-}
-
-.fx-flex-row-20 {
-  flex: 1 1 100%;
-  box-sizing: border-box;
-  max-width: 20%;
-}
-
-.fx-flex-row-30 {
-  flex: 1 1 100%;
-  box-sizing: border-box;
-  max-width: 30%;
-}
-
-.fx-flex-row-33 {
-  flex: 1 1 100%;
-  box-sizing: border-box;
-  max-width: 33.3%;
-}
-
-.fx-flex-row-40 {
-  flex: 1 1 100%;
-  box-sizing: border-box;
-  max-width: 40%;
-}
-
-.fx-flex-row-50 {
-  flex: 1 1 100%;
-  box-sizing: border-box;
-  max-width: 50%;
-}
-
-.fx-flex-row-60 {
-  flex: 1 1 100%;
-  box-sizing: border-box;
-  max-width: 60%;
-}
-
-.fx-flex-row-70 {
-  flex: 1 1 100%;
-  box-sizing: border-box;
-  max-width: 70%;
-}
-
-.fx-flex-row-80 {
-  flex: 1 1 100%;
-  box-sizing: border-box;
-  max-width: 80%;
-}
-
-.fx-flex-row-90 {
-  flex: 1 1 100%;
-  box-sizing: border-box;
-  max-width: 90%;
-}
-
-.fx-flex-row-100 {
-  flex: 1 1 100%;
-  box-sizing: border-box;
-  max-width: 100%;
-}
-
-.fx-gap-5 {
-  gap: 5px;
-  display: flex;
-}
-
-.fx-gap-10 {
-  gap: 10px;
-  display: flex;
-}
-
-.fx-gap-15 {
-  gap: 15px;
-  display: flex;
-}
-
-.fx-gap-20 {
-  gap: 20px;
-  display: flex;
-}
-
-.fx-gap-25 {
-  gap: 25px;
-  display: flex;
-}
-
-.fx-gap-30 {
-  gap: 30px;
-  display: flex;
-}
-
-.fx-wrap {
-  flex-wrap: wrap;
+.var-marker-HAS_CODES {
+  background: transparent;
 }
