--- a/src/app/schemer/var-coding/var-coding-classic.component.html
+++ b/src/app/schemer/var-coding/var-coding-classic.component.html
@@ -1,16 +1,16 @@
-<div fxLayout="column" *ngIf="codingScheme" fxLayoutGap="5px" class="element-host">
-  <div fxLayout="row" fxLayoutGap="10px">
-    <mat-form-field fxFlex>
-      <input matInput [placeholder]="'description' | translate" [(ngModel)]="codingScheme.label"
-             (change)="setCodingSchemeChanged()"
+<div *ngIf="varCoding" class="element-host fx-column-space-between-end">
+  <div class="fx-flex-row-10">
+    <mat-form-field>
+      <input matInput [placeholder]="'description' | translate" [(ngModel)]="varCoding.label"
+             (change)="varCodingChanged.emit(varCoding)"
       >
     </mat-form-field>
   </div>
-  <div fxLayout="row" fxLayoutGap="10px" *ngIf="codingScheme.sourceType !== 'BASE'">
-    <div fxFlex="280px" fxLayout="column">
+  <div *ngIf="varCoding.sourceType !== 'BASE'" class="fx-row-center-stretch">
+    <div class="fx-column-start-center">
       <mat-form-field>
         <mat-label>Methode der Ableitung</mat-label>
-        <mat-select [(value)]="codingScheme.sourceType">
+        <mat-select [(value)]="varCoding.sourceType">
           <mat-option [value]="'DERIVE_CONCAT'">
             {{'scheme-type.DERIVE_CONCAT' | translate}}
           </mat-option>
@@ -21,7 +21,7 @@
       </mat-form-field>
       <mat-form-field>
         <mat-label>{{ 'derive-source-type.prompt' | translate }}</mat-label>
-        <mat-select [(value)]="codingScheme.deriveSourceType">
+        <mat-select [(value)]="varCoding.deriveSourceType">
           <mat-option [value]="'VALUE'">
             {{'derive-source-type.VALUE' | translate}}
           </mat-option>
@@ -34,85 +34,84 @@
         </mat-select>
       </mat-form-field>
     </div>
-    <div fxFlex fxLayout="row">
+    <div class="fx-row-start-center">
       <mat-form-field class="sources">
         <mat-label>{{ 'derive-sources.prompt' | translate }}</mat-label>
-        <mat-chip-list #chipList>
-          <mat-chip *ngIf="codingScheme.deriveSources.length === 0" [matMenuTriggerFor]="menu" class="no-sources">{{ 'derive-sources.error' | translate }}</mat-chip>
-          <mat-chip *ngFor="let source of codingScheme.deriveSources"
+        <mat-chip-listbox>
+          <mat-chip *ngIf="varCoding.deriveSources.length === 0" [matMenuTriggerFor]="menu" class="no-sources">{{ 'derive-sources.error' | translate }}</mat-chip>
+          <mat-chip *ngFor="let source of varCoding.deriveSources"
                     [class]="allVariables.indexOf(source) < 0 ? 'source-missing' : 'source-ok'"
                     removable="true" (removed)="deleteDeriveSource(source)">
             {{source}}
             <mat-icon matChipRemove>cancel</mat-icon>
           </mat-chip>
-          <button mat-flat-button [matMenuTriggerFor]="menu" *ngIf="getNewSources(codingScheme.deriveSources).length > 0">
+          <button mat-flat-button [matMenuTriggerFor]="menu" *ngIf="getNewSources(varCoding.deriveSources).length > 0">
             <mat-icon>add</mat-icon>
           </button>
-        </mat-chip-list>
+        </mat-chip-listbox>
       </mat-form-field>
       <mat-menu #menu="matMenu">
-        <button mat-menu-item *ngFor="let newSource of getNewSources(codingScheme.deriveSources)" (click)="addDeriveSource(newSource)">
+        <button mat-menu-item *ngFor="let newSource of getNewSources(varCoding.deriveSources)" (click)="addDeriveSource(newSource)">
           {{newSource}}
         </button>
       </mat-menu>
     </div>
   </div>
-  <div fxLayout="row" fxLayoutGap="10px">
-    <mat-card fxFlex="220px">
+  <div class="fx-row-start-center">
+    <mat-card>
       <mat-card-subtitle>{{'value-transformation.prompt' | translate}}</mat-card-subtitle>
-      <mat-card-content fxLayout="column" fxLayoutGap="6px">
-        <mat-checkbox [checked]="codingScheme ? (codingScheme.valueTransformations.indexOf('TO_UPPER') >= 0) : false"
+      <mat-card-content class="fx-column-start-center">
+        <mat-checkbox [checked]="varCoding ? (varCoding.valueTransformations.indexOf('TO_UPPER') >= 0) : false"
                       (change)="alterValueTransformation('TO_UPPER', $event.checked)">
           <div [style.white-space]="'normal'" [style.line-height]="1.2">
             {{'value-transformation.TO_UPPER' | translate}}
           </div>
         </mat-checkbox>
-        <mat-checkbox [checked]="codingScheme ? (codingScheme.valueTransformations.indexOf('REMOVE_WHITE_SPACES') >= 0) : false"
+        <mat-checkbox [checked]="varCoding ? (varCoding.valueTransformations.indexOf('REMOVE_WHITE_SPACES') >= 0) : false"
                       (change)="alterValueTransformation('REMOVE_WHITE_SPACES', $event.checked)">
           <div [style.white-space]="'normal'" [style.line-height]="1.2">
             {{'value-transformation.REMOVE_WHITE_SPACES' | translate}}
           </div>
         </mat-checkbox>
         <!--
-        <mat-checkbox [checked]="codingScheme ? (codingScheme.valueTransformations.indexOf('DATE_TO_ISO') >= 0) : false"
+        <mat-checkbox [checked]="varCoding ? (varCoding.valueTransformations.indexOf('DATE_TO_ISO') >= 0) : false"
                       (change)="alterValueTransformation('DATE_TO_ISO', $event.checked)">
           {{'value-transformation.DATE_TO_ISO' | translate}}
         </mat-checkbox>
-        <mat-checkbox [checked]="codingScheme ? (codingScheme.valueTransformations.indexOf('TIME_TO_ISO') >= 0) : false"
+        <mat-checkbox [checked]="varCoding ? (varCoding.valueTransformations.indexOf('TIME_TO_ISO') >= 0) : false"
                       (change)="alterValueTransformation('TIME_TO_ISO', $event.checked)">
           {{'value-transformation.TIME_TO_ISO' | translate}}
         </mat-checkbox>
         -->
       </mat-card-content>
     </mat-card>
-    <mat-card fxFlex>
-      <mat-card-subtitle fxLayout="row" fxLayoutAlign="space-between stretch">
+    <mat-card>
+      <mat-card-subtitle class="fx-row-space-between-stretch">
         {{'manual-instruction.prompt-general' | translate}}
         <button mat-flat-button (click)="editTextDialog_manualInstruction()">
           <mat-icon>edit</mat-icon>
         </button>
       </mat-card-subtitle>
       <mat-card-content class="instructions">
-        <div [innerHTML]="codingScheme ? getSanitizedText(codingScheme.manualInstruction) : null"></div>
+        <div [innerHTML]="varCoding ? getSanitizedText(varCoding.manualInstruction) : null"></div>
       </mat-card-content>
     </mat-card>
   </div>
-  <div fxLayout="column" fxLayoutGap="10px">
+  <div class="fx-column-start-center">
     <h3>{{'code.header' | translate}}</h3>
-    <div fxLayout="row" fxLayoutAlign="start start" *ngFor="let cd of codingScheme.codes" fxLayoutGap="10px">
-      <code-data fxFlex
-                 [codeData]="cd"
-                 [allCodes]="codingScheme.codes"
-                 (codeDataChanged)="setCodingSchemeChanged()"></code-data>
+    <div *ngFor="let cd of varCoding.codes" class="fx-row-start-start">
+      <code-data [codeData]="cd"
+                 [allCodes]="varCoding.codes"
+                 (codeDataChanged)="varCodingChanged.emit(varCoding)"></code-data>
       <button mat-raised-button (click)="deleteCode(cd.id)" [matTooltip]="'code.prompt.delete' | translate">
         <mat-icon>delete</mat-icon>
       </button>
     </div>
-    <div fxLayout="row" fxLayoutAlign="start center" fxLayoutGap="20px">
+    <div class="fx-row-start-center">
       <button mat-raised-button (click)="addCode()">
         <mat-icon>add</mat-icon>{{'code.prompt.add' | translate}}
       </button>
-      <div *ngIf="codingScheme.codes.length === 0" class="no-codes">{{'code.no-codes' | translate}}</div>
+      <div *ngIf="varCoding.codes.length === 0" class="no-codes">{{'code.no-codes' | translate}}</div>
     </div>
   </div>
 </div>
