--- a/src/app/schemer/schemer.component.scss
+++ b/src/app/schemer/schemer.component.scss
@@ -80,3 +80,19 @@
 .var-marker-HAS_CODES {
   background: transparent;
 }
+
+.material-icons {
+  font-family: 'Material Icons', 'Arial Black', 'serif';
+  font-weight: normal;
+  font-style: normal;
+  font-size: 24px;
+  line-height: 1;
+  letter-spacing: normal;
+  text-transform: none;
+  display: inline-block;
+  white-space: nowrap;
+  word-wrap: normal;
+  direction: ltr;
+  -moz-font-feature-settings: 'liga';
+  -moz-osx-font-smoothing: grayscale;
+}
