--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,8 @@
+body {
+  margin: 0;
+  font-family: 'NunitoSans', sans-serif;
+}
+
 .fx-row-space-between-center {
   box-sizing: border-box;
   display: flex;
