--- a/src/app/schemer/schemer.component.html
+++ b/src/app/schemer/schemer.component.html
@@ -1,7 +1,7 @@
 <div class="scheme-body fx-row-space-between-stretch">
-  <div class="navi-bar fx-column-start-center" *ngIf="_varList.length > 0">
-    <div class="var-scheme-list">
-      <div class="basic-var-list-header">{{'varlist.base' | translate}}</div>
+  <div *ngIf="_varList.length > 0" class="navi-bar fx-column-space-between-stretch">
+    <div class="var-scheme-list fx-flex">
+      <div class="var-list-header">{{'varlist.base' | translate}}</div>
       <mat-nav-list *ngFor="let varBasic of basicVariables" class="fx-column-start-center">
         <div class="fx-row-start-center">
           <div [class]="'var-marker-' + codingStatus[varBasic.id]" [matTooltip]="('coding-status.base-' + codingStatus[varBasic.id]) | translate"></div>
@@ -13,7 +13,7 @@
           </a>
         </div>
       </mat-nav-list>
-      <div class="var-scheme-list-header">{{'varlist.derived' | translate}}</div>
+      <div class="var-list-header">{{'varlist.derived' | translate}}</div>
       <mat-nav-list *ngFor="let varScheme of derivedVariables" class="fx-column-start-center">
         <div class="fx-row-start-center">
           <div [class]="'var-marker-' + codingStatus[varScheme.id]" [matTooltip]="('coding-status.derived-' + codingStatus[varScheme.id]) | translate"></div>
@@ -27,8 +27,9 @@
       </mat-nav-list>
     </div>
     <!-- # # # # # # # # # # # # # # # # # # # # # # # # -->
-    <div class="var-list-buttons fx-row-start-center">
-      <button mat-button (click)="addVarScheme()" [matTooltip]="'varlist.add' | translate" matTooltipPosition="above">
+    <div class="var-list-buttons">
+      <button mat-button (click)="addVarScheme()"
+              [matTooltip]="'varlist.add' | translate" matTooltipPosition="above">
         <mat-icon>add</mat-icon>
       </button>
       <button mat-button [disabled]="(selectedCoding$ | async) === null || (selectedCoding$ | async)?.sourceType === 'BASE'"
