--- a/src/app/schemer/schemer.component.scss
+++ b/src/app/schemer/schemer.component.scss
@@ -8,6 +8,8 @@
 }
 
 .navi-bar {
+  height: 100%;
+  width: 200px;
   background-color:whitesmoke;
   margin: 0;
   border-left: 5px solid #c4e6e8;
@@ -21,9 +23,9 @@
   background-color: #c4e6e8;
 }
 
-.var-list-buttons > .mat-button {
+.var-list-buttons > .mat-mdc-button {
   padding: 0;
-  min-width: 0;
+  min-width: 40px;
 }
 
 .selected {
@@ -36,15 +38,12 @@
   overflow-y: auto;
 }
 
-.basic-var-list-header, .var-scheme-list-header {
-  height: 22px;
-  padding: 8px 15px;
-  font-size: 16px;
+.var-list-header {
+  height: 20px;
+  padding: 4px 6px;
+  font-size: 14px;
   background-color: #c4e6e8;
-}
-
-.var-scheme-list-header {
-  margin-top: 10px;
+  margin: 0;
 }
 
 .var-list-entry {
@@ -64,9 +63,9 @@
 .var-marker-INVALID_SOURCE, .var-marker-EMPTY, .var-marker-HAS_CODES {
   width: 12px;
   height: 12px;
-  border-radius: 6px;
-  margin-left: 2px;
-  margin-right: 2px;
+  border-radius: 0;
+  margin-left: 4px;
+  margin-right: 0;
 }
 
 .var-marker-INVALID_SOURCE {
@@ -95,4 +94,301 @@
   direction: ltr;
   -moz-font-feature-settings: 'liga';
   -moz-osx-font-smoothing: grayscale;
+}
+
+.fx-row-space-between-center {
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.fx-row-space-between-start {
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: flex-start;
+}
+
+.fx-row-space-between-end {
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: flex-end;
+}
+
+.fx-row-space-between-stretch {
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: stretch;
+}
+
+.fx-row-space-between-center {
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.fx-row-space-around-center {
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.fx-row-start-center {
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+.fx-row-start-end {
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: flex-end;
+}
+
+.fx-row-end-end {
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+  align-items: flex-end;
+}
+
+.fx-row-end-stretch {
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+  align-items: stretch;
+}
+
+.fx-row-end-center {
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+  align-items: center;
+}
+
+.fx-row-start-stretch {
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: stretch;
+}
+
+.fx-row-center-start {
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: flex-start;
+}
+
+.fx-row-start-start {
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: flex-start;
+}
+
+.fx-row-center-center {
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+
+.fx-row-center-stretch {
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: stretch;
+}
+
+.fx-column-center-center {
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.fx-column-start-start {
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
+}
+
+.fx-column-start-center {
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+.fx-column-start-stretch {
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: stretch;
+}
+
+.fx-column-end-stretch {
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  align-items: stretch;
+}
+
+.fx-column-space-between-stretch {
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: stretch;
+}
+
+.fx-column-space-between-end {
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: flex-end;
+}
+
+.fx-column-center-end {
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-end;
+}
+
+.fx-flex-fill {
+  flex: 1 1 0;
+  box-sizing: border-box;
+}
+
+.fx-flex-row-10 {
+  box-sizing: border-box;
+  flex: 1 1 100%;
+  max-width: 10%;
+}
+
+.fx-flex-row-20 {
+  flex: 1 1 100%;
+  box-sizing: border-box;
+  max-width: 20%;
+}
+
+.fx-flex-row-30 {
+  flex: 1 1 100%;
+  box-sizing: border-box;
+  max-width: 30%;
+}
+
+.fx-flex-row-33 {
+  flex: 1 1 100%;
+  box-sizing: border-box;
+  max-width: 33.3%;
+}
+
+.fx-flex-row-40 {
+  flex: 1 1 100%;
+  box-sizing: border-box;
+  max-width: 40%;
+}
+
+.fx-flex-row-50 {
+  flex: 1 1 100%;
+  box-sizing: border-box;
+  max-width: 50%;
+}
+
+.fx-flex-row-60 {
+  flex: 1 1 100%;
+  box-sizing: border-box;
+  max-width: 60%;
+}
+
+.fx-flex-row-70 {
+  flex: 1 1 100%;
+  box-sizing: border-box;
+  max-width: 70%;
+}
+
+.fx-flex-row-80 {
+  flex: 1 1 100%;
+  box-sizing: border-box;
+  max-width: 80%;
+}
+
+.fx-flex-row-90 {
+  flex: 1 1 100%;
+  box-sizing: border-box;
+  max-width: 90%;
+}
+
+.fx-flex-row-100 {
+  flex: 1 1 100%;
+  box-sizing: border-box;
+  max-width: 100%;
+}
+
+.fx-gap-5 {
+  gap: 5px;
+  display: flex;
+}
+
+.fx-gap-10 {
+  gap: 10px;
+  display: flex;
+}
+
+.fx-gap-15 {
+  gap: 15px;
+  display: flex;
+}
+
+.fx-gap-20 {
+  gap: 20px;
+  display: flex;
+}
+
+.fx-gap-25 {
+  gap: 25px;
+  display: flex;
+}
+
+.fx-gap-30 {
+  gap: 30px;
+  display: flex;
+}
+
+.fx-wrap {
+  flex-wrap: wrap;
 }
