Apply material theming

--- a/src/app/schemer/schemer.component.html
+++ b/src/app/schemer/schemer.component.html
@@ -49,10 +49,10 @@
 
   <div *ngIf="allVariableIds.length === 0"
        style="margin: 20px;">{{'data-error.base-variables-missing' | translate}}</div>
-  <var-coding-classic [varCoding]="selectedCoding$ | async" class="var-scheme-container"
+  <var-coding-classic [varCoding]="selectedCoding$ | async" class="var-scheme-container fx-flex-row-100"
               [allVariables]="allVariableIds">
   </var-coding-classic>
-  <mat-drawer #drawer *ngIf="showChecker" mode="over" class="fx-column-start-center">
+  <mat-drawer #drawer *ngIf="showChecker" mode="over" class="fx-column-start-center" [style.background-color]="'red'">
     <mat-toolbar class="fx-row-space-between-center">
       Antwortschema prüfen
       <button mat-button (click)="drawer.toggle()">
