--- a/src/app/schemer/schemer.component.scss
+++ b/src/app/schemer/schemer.component.scss
@@ -4,12 +4,13 @@
   height: 100%;
   top: 0;
   bottom: 0;
+  background-color: #ffcc00;
   padding: 0;
 }
 
 .navi-bar {
   height: 100%;
-  width: 200px;
+  flex: 0 0 200px;
   background-color:whitesmoke;
   margin: 0;
   border-left: 5px solid #c4e6e8;
@@ -33,7 +34,7 @@
 }
 
 .var-scheme-container {
-  background-color: white;
+  background-color: darkgrey;
   overflow-x: hidden;
   overflow-y: auto;
 }
@@ -78,22 +79,6 @@
 
 .var-marker-HAS_CODES {
   background: transparent;
-}
-
-.material-icons {
-  font-family: 'Material Icons', 'Arial Black', 'serif';
-  font-weight: normal;
-  font-style: normal;
-  font-size: 24px;
-  line-height: 1;
-  letter-spacing: normal;
-  text-transform: none;
-  display: inline-block;
-  white-space: nowrap;
-  word-wrap: normal;
-  direction: ltr;
-  -moz-font-feature-settings: 'liga';
-  -moz-osx-font-smoothing: grayscale;
 }
 
 .fx-row-space-between-center {
