--- a/src/assets/customTheme.scss
+++ b/src/assets/customTheme.scss
@@ -1,8 +1,8 @@
-@use '../../node_modules/@angular/material/index' as mat;
-@import '../../node_modules/@angular/material/theming';
+@use "@angular/material" as mat;
+@import "@angular/material/theming";
 
 $aspect-typography: mat.define-typography-config(
-  $font-family: 'NunitoSans',
+        $font-family: 'NunitoSans',
 );
 @include angular-material-typography($aspect-typography);
 
