--- a/src/app/schemer/schemer.component.scss
+++ b/src/app/schemer/schemer.component.scss
@@ -51,7 +51,8 @@
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
-  font-size: 14px
+  font-size: 14px;
+  padding-left: 2px;
 }
 
 .invalid-data-format {
@@ -62,11 +63,11 @@
 }
 
 .var-marker-INVALID_SOURCE, .var-marker-EMPTY, .var-marker-HAS_CODES {
-  width: 12px;
+  flex: 0 0 12px;
   height: 12px;
   border-radius: 0;
-  margin-left: 4px;
-  margin-right: 0;
+  margin-left: 6px;
+  margin-right: 6px;
 }
 
 .var-marker-INVALID_SOURCE {
