--- a/src/app/schemer/scheme-checker/scheme-checker.component.scss
+++ b/src/app/schemer/scheme-checker/scheme-checker.component.scss
@@ -1,1 +1,1 @@
-.check-host {  padding: 20px;}
+.check-host {  padding: 20px;  box-sizing: border-box;  display: flex;  flex-direction: column;  justify-content: flex-start;  align-items: center;}.check-element {  box-sizing: border-box;  display: flex;  flex-direction: row;  justify-content: flex-start;  align-items: center;}
