--- a/src/app/schemer/var-coding/var-coding-classic/var-coding-classic.component.html
+++ b/src/app/schemer/var-coding/var-coding-classic/var-coding-classic.component.html
@@ -1,9 +1,9 @@
-<div *ngIf="varCoding" class="fx-column-space-between-stretch" [style.padding]="'10px'">
+<div *ngIf="codes" class="fx-column-space-between-stretch" [style.padding]="'10px'">
   <h3>{{'code.header' | translate}}</h3>
-  <div *ngFor="let cd of varCoding.codes" class="fx-row-start-start">
+  <div *ngFor="let cd of codes" class="fx-row-start-start">
     <code-data [codeData]="cd"
-               [allCodes]="varCoding.codes"
-               (codeDataChanged)="varCodingChanged.emit(varCoding)"></code-data>
+               [allCodes]="codes"
+               (codeDataChanged)="codesChanged.emit(codes)"></code-data>
     <button mat-raised-button (click)="deleteCode(cd.id)" [matTooltip]="'code.prompt.delete' | translate">
       <mat-icon>delete</mat-icon>
     </button>
@@ -12,7 +12,7 @@
     <button mat-raised-button (click)="addCode()">
       <mat-icon>add</mat-icon>{{'code.prompt.add' | translate}}
     </button>
-    <div *ngIf="varCoding.codes.length === 0" class="no-codes">{{'code.no-codes' | translate}}</div>
+    <div *ngIf="codes.length === 0" class="no-codes">{{'code.no-codes' | translate}}</div>
   </div>
 </div>
 
