--- a/src/app/schemer/var-coding/var-coding.component.html
+++ b/src/app/schemer/var-coding/var-coding.component.html
@@ -38,10 +38,10 @@
               </mat-select>
             </mat-form-field>
           </div>
-          <div class="fx-row-start-center">
-            <mat-label>{{ 'derive-sources.prompt' | translate }}</mat-label>
+          <div class="fx-row-start-center fx-gap-5">
+            <mat-label [class]="varCoding.deriveSources.length === 0 ? 'no-sources' : ''">{{ 'derive-sources.prompt' | translate }}</mat-label>
             <mat-chip-listbox>
-              <mat-chip *ngIf="varCoding.deriveSources.length === 0" [matMenuTriggerFor]="menu" class="no-sources">{{ 'derive-sources.error' | translate }}</mat-chip>
+              <mat-chip *ngIf="varCoding.deriveSources.length === 0" [matMenuTriggerFor]="menu">{{ 'derive-sources.error' | translate }}</mat-chip>
               <mat-chip *ngFor="let source of varCoding.deriveSources"
                         [class]="allVariables.indexOf(source) < 0 ? 'source-missing' : 'source-ok'"
                         removable="true" (removed)="deleteDeriveSource(source)">
@@ -119,7 +119,8 @@
       </mat-card-content>
     </mat-card>
   </div>
-  <var-coding-classic [varCoding]="varCoding" class="var-scheme-container fx-flex-row-100"
-                      [allVariables]="allVariables"></var-coding-classic>
 </div>
+<var-coding-classic [codes]="varCoding?.codes" class="var-scheme-container fx-flex-row-100"
+                    [allVariables]="allVariables"></var-coding-classic>
+
 
